--- a/index.html
+++ b/index.html
@@ -35,6 +35,34 @@
         </div>
       </div>
     </nav>
+    <section id="profile">
+      <div class="section__pic-container">
+        <img src="./assets/profile-pic.png" alt="Pricop Stetco" />
+      </div>
+      <div class="section__text">
+        <p class="section__text__p1">Hello, I'm</p>
+        <h1 class="title">Pricop Stetco</h1>
+        <p class="section__text__p2">Frontend Developer</p>
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('./assets/resume-example.pdf')"
+          >
+            View CV in PDF
+          </button>
+          <button
+          class="btn btn-color-1"
+          onclick="location.href='./#contact'"
+        >
+          Contact me
+        </button>
+        </div>
+        <div id="socials-container">
+            <img src="./assets/linkedin.png" alt="My Linkedin profile" class="icon" onclick="location.href='https://linkedin.com/'">
+            <img src="./assets/github.png" alt="My github profile" class="icon" onclick="location.href='https://github.com'">
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
