--- a/index.html
+++ b/index.html
@@ -50,16 +50,70 @@
           >
             View CV in PDF
           </button>
-          <button
-          class="btn btn-color-1"
-          onclick="location.href='./#contact'"
-        >
-          Contact me
-        </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            Contact me
+          </button>
         </div>
         <div id="socials-container">
-            <img src="./assets/linkedin.png" alt="My Linkedin profile" class="icon" onclick="location.href='https://linkedin.com/'">
-            <img src="./assets/github.png" alt="My github profile" class="icon" onclick="location.href='https://github.com'">
+          <img
+            src="./assets/linkedin.png"
+            alt="My Linkedin profile"
+            class="icon"
+            onclick="location.href='https://linkedin.com/'"
+          />
+          <img
+            src="./assets/github.png"
+            alt="My github profile"
+            class="icon"
+            onclick="location.href='https://github.com'"
+          />
+        </div>
+      </div>
+    </section>
+
+    <section id="about">
+      <p class="section__text__p1">Get to Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section__pic-container">
+          <img
+            src="./assets/about-pic.png"
+            alt="Profile Picture"
+            class="about-pic"
+          />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img
+                src="./assets/experience.png"
+                alt="Experience icon"
+                class="icon"
+              />
+              <h3>Experience</h3>
+              <p>2+ years <br />Frontend Development</p>
+            </div>
+            <div class="details-container">
+              <img
+                src="./assets/education.png"
+                alt="Experience icon"
+                class="icon"
+              />
+              <h3>Education</h3>
+              <p>B. Sc. Bachelors Degree <br />M.Sc. Masters Degree</p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis, ipsam a. Ex ab quia sit! Sed ipsa, tempora,
+              perferendis quam, quidem fugit amet voluptatibus qui repudiandae
+              mollitia iste tempore. Laudantium libero dicta accusamus
+              necessitatibus tempora! Soluta necessitatibus, provident
+              voluptates ducimus blanditiis, ratione non natus quibusdam, ipsum
+              ab suscipit eum ex?
+            </p>
+          </div>
         </div>
       </div>
     </section>
