--- a/index.html
+++ b/index.html
@@ -117,6 +117,6 @@
         </div>
       </div>
     </section>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
