Added arrow in SVG

--- a/index.html
+++ b/index.html
@@ -105,16 +105,28 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis, ipsam a. Ex ab quia sit! Sed ipsa, tempora,
-              perferendis quam, quidem fugit amet voluptatibus qui repudiandae
-              mollitia iste tempore. Laudantium libero dicta accusamus
-              necessitatibus tempora! Soluta necessitatibus, provident
-              voluptates ducimus blanditiis, ratione non natus quibusdam, ipsum
-              ab suscipit eum ex?
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Sapiente, unde necessitatibus, eos nesciunt ea et ducimus
+              distinctio quisquam iure perspiciatis molestiae, corporis veniam
+              blanditiis tenetur possimus. Dolore, aliquid cum perspiciatis
+              quisquam nisi impedit asperiores fuga atque. Incidunt, iste nihil
+              magni temporibus nesciunt, iure accusantium soluta adipisci
+              dolorum natus rem, quasi reprehenderit placeat sequi. Officiis
+              omnis harum dignissimos corporis tempora, at facere non
+              voluptatibus eius autem veniam? In assumenda quasi earum
+              reprehenderit accusantium! Omnis culpa excepturi eligendi quae
+              laudantium aliquam maxime.
             </p>
           </div>
         </div>
+        <img
+          src="./assets/arrow.svg"
+          alt="Arrow icon"
+          class="icon arrow"
+          onclick="location.href'./#experience'"
+          ;
+          ;
+        />
       </div>
     </section>
     <script src="./js/script.js"></script>
