--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       />
     </section>
     <section id="contact">
-      <p class="section__text__1">Get in Touch</p>
+      <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
@@ -391,6 +391,19 @@
         </div>
       </div>
     </section>
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2024 - Pricop Stetco. All rights reserved.</p>
+    </footer>
     <script src="./js/script.js"></script>
   </body>
 </html>
