Changed PNG with SVG

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="./assets/linkedin.svg"
             alt="My Linkedin profile"
             class="icon"
             onclick="location.href='https://linkedin.com/'"
           />
           <img
-            src="./assets/github.png"
+            src="./assets/github.svg"
             alt="My github profile"
             class="icon"
             onclick="location.href='https://github.com'"
